<resources>
    <string name="app_name">Football Score Counter</string>
    <string name="team_a">Team A</string>
    <string name="score">0</string>
    <string name="button1">Goal</string>
    <string name="button2">Red Card</string>
    <string name="button3">Yellow Card</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="foul">0</string>
</resources>