<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/team_a_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/team_a"
            android:textSize="@dimen/team_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="100sp" />

        <Button
            android:id="@+id/team_a_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="plusThreePointsTeamA"
            android:text="@string/button1"
            app:backgroundTint="@color/purple_200" />

        <Button
            android:id="@+id/team_a_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="plusTwoPointsTeamA"
            android:text="@string/button2"
            app:backgroundTint="@color/button_team_a" />

        <Button
            android:id="@+id/team_a_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="plusOnePointTeamA"
            android:text="@string/button3"
            app:backgroundTint="@color/button_team_a" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/team_b_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/team_b"
            android:textSize="@dimen/team_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="100sp" />

        <Button
            android:id="@+id/team_b_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="plusThreePointsTeamB"
            android:text="@string/button1"
            app:backgroundTint="@color/button_team_b" />

        <Button
            android:id="@+id/team_b_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="plusTwoPointsTeamB"
            android:text="@string/button2"
            app:backgroundTint="#FF9800" />

        <Button
            android:id="@+id/team_b_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="plusOnePointTeamB"
            android:text="@string/button3"
            app:backgroundTint="@color/button_team_b" />

    </LinearLayout>

</LinearLayout>